--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,8 @@ POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=chrisbanes
 POM_DEVELOPER_NAME=Chris Banes
+
+ANDROID_BUILD_MIN_SDK_VERSION=10
+ANDROID_BUILD_TARGET_SDK_VERSION=19
+ANDROID_BUILD_TOOLS_VERSION=19.1.0
+ANDROID_BUILD_SDK_VERSION=19
